@@ -2,6 +2,10 @@
 VERSION 0.2.10
 =======================================================================
 
+14-12-2010 J-Donald Tournier <d.tournier@brain.org.au>
+    * lib/file/dicom/definitions.h:
+      modify format_date() to (not) handle badly formatted date fields
+
 09-12-2010 J-Donald Tournier <d.tournier@brain.org.au>
     * cmd/average.cpp: fix -axis option again
 
